--- a/photoshare/photos/templates/photos/photo.html
+++ b/photoshare/photos/templates/photos/photo.html
@@ -17,7 +17,7 @@
                 <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
 
                 <div style="height: 90vh;">
-                    <img style="max-width: 100%; max-height: 100%;" src="{{ photo.image.url }}" alt="">
+                    <img style="max-width: 100%; max-height: 100%;" src="{{ photo.image.url }}">
 
                     <p>{{ photo.description }}</p>
                 </div>
