Uploading to AWS S3 Buckets

--- a/photoshare/photos/templates/photos/gallery.html
+++ b/photoshare/photos/templates/photos/gallery.html
@@ -13,6 +13,11 @@
             height: 200px;
             object-fit: cover;
         }
+
+        .list-group-item a{
+          text-decoration: none;
+          color: #000;
+        }
     </style>
 </head>
 <body class="m-5">
